gke/pablogarin-front/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pablogarin-frontend
  namespace: pablogarin
  labels:
    app: pablogarin-front
    test: test
  # annotations:
  #   fluxcd.io/tag.example-app: semver:~1.0
  #   fluxcd.io/automated: 'true'
spec:
  selector:
    matchLabels:
      app: pablogarin-front
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: pablogarin-front
    spec:
      containers:
      - name: pablogarin-front
        image: pablogarin/pablogarin-front:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 5000
        restartPolicy: Always
