gke/pablogarin-front/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pablogarin-frontend-service
  namespace: pablogarin
  labels:
    app: pablogarin-front
spec:
  type: LoadBalancer
  selector:
    app: pablogarin-front
  ports:
    - protocol: TCP
      name: http
      port: 80
      targetPort: 5000
